--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,6 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #606c71; }
@@ -53,11 +52,13 @@ a {
       margin-top: 1rem;
       margin-left: 0; } }
 
+
 .page-header {
   color: #fff;
   text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-color: #626db3;
+  background-image: linear-gradient(150deg, #B751D0, #158799);
+}
 
 @media screen and (min-width: 64em) {
   .page-header {
@@ -75,9 +76,19 @@ a {
   margin-top: 0;
   margin-bottom: 0.1rem; }
 
+.project-avator{
+  display: inline-block;
+  height: 100px;
+  width: 100px;
+  border-radius: 50px;
+  border: #ccc solid 4px;
+  background: url(../images/self-avator.jpg) center center no-repeat;
+  background-size:100px 100px;
+}
+
 @media screen and (min-width: 64em) {
   .project-name {
-    font-size: 3.25rem; } }
+    font-size: 2.4rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .project-name {
@@ -111,7 +122,7 @@ a {
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
   margin-top: 2rem;
   margin-bottom: 1rem;
-  font-weight: normal;
+  font-weight: 600;
   color: #159957; }
 .main-content p {
   margin-bottom: 1em; }
