--- a/css/index.css
+++ b/css/index.css
@@ -9,10 +9,10 @@ body {
   color: #606c71; }
 
 a {
-  color: #1e6bb8;
+  color: #17869a;
   text-decoration: none; }
-  a:hover {
-    text-decoration: underline; }
+a:hover {
+  text-decoration: underline; }
 
 .btn {
   display: inline-block;
@@ -24,8 +24,8 @@ a {
   border-width: 1px;
   border-radius: 0.3rem;
   transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
-  .btn + .btn {
-    margin-left: 1rem; }
+.btn + .btn {
+  margin-left: 1rem; }
 
 .btn:hover {
   color: rgba(255, 255, 255, 0.8);
@@ -48,9 +48,9 @@ a {
     width: 100%;
     padding: 0.75rem;
     font-size: 0.9rem; }
-    .btn + .btn {
-      margin-top: 1rem;
-      margin-left: 0; } }
+  .btn + .btn {
+    margin-top: 1rem;
+    margin-left: 0; } }
 
 
 .page-header {
@@ -123,7 +123,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: 600;
-  color: #159957; }
+  color: #17869a; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
@@ -143,20 +143,20 @@ a {
   background-color: #f3f6fa;
   border: solid 1px #dce6f0;
   border-radius: 0.3rem; }
-  .main-content pre > code {
-    padding: 0;
-    margin: 0;
-    font-size: 0.9rem;
-    color: #567482;
-    word-break: normal;
-    white-space: pre;
-    background: transparent;
-    border: 0; }
+.main-content pre > code {
+  padding: 0;
+  margin: 0;
+  font-size: 0.9rem;
+  color: #567482;
+  word-break: normal;
+  white-space: pre;
+  background: transparent;
+  border: 0; }
 .main-content .highlight {
   margin-bottom: 1rem; }
-  .main-content .highlight pre {
-    margin-bottom: 0;
-    word-break: normal; }
+.main-content .highlight pre {
+  margin-bottom: 0;
+  word-break: normal; }
 .main-content .highlight pre, .main-content pre {
   padding: 0.8rem;
   overflow: auto;
@@ -173,8 +173,8 @@ a {
   word-wrap: normal;
   background-color: transparent;
   border: 0; }
-  .main-content pre code:before, .main-content pre code:after, .main-content pre tt:before, .main-content pre tt:after {
-    content: normal; }
+.main-content pre code:before, .main-content pre code:after, .main-content pre tt:before, .main-content pre tt:after {
+  content: normal; }
 .main-content ul, .main-content ol {
   margin-top: 0; }
 .main-content blockquote {
@@ -182,31 +182,31 @@ a {
   margin-left: 0;
   color: #819198;
   border-left: 0.3rem solid #dce6f0; }
-  .main-content blockquote > :first-child {
-    margin-top: 0; }
-  .main-content blockquote > :last-child {
-    margin-bottom: 0; }
+.main-content blockquote > :first-child {
+  margin-top: 0; }
+.main-content blockquote > :last-child {
+  margin-bottom: 0; }
 .main-content table {
   width: 100%;
   display: block;
   overflow: auto;
   word-break: normal;
   word-break: keep-all; }
-  .main-content table th {
-    font-weight: bold; }
-  .main-content table th, .main-content table td {
-    padding: 0.5rem 1rem;
-    border: 1px solid #e9ebec; }
+.main-content table th {
+  font-weight: bold; }
+.main-content table th, .main-content table td {
+  padding: 0.5rem 1rem;
+  border: 1px solid #e9ebec; }
 .main-content dl {
   padding: 0; }
-  .main-content dl dt {
-    padding: 0;
-    margin-top: 1rem;
-    font-size: 1rem;
-    font-weight: bold; }
-  .main-content dl dd {
-    padding: 0;
-    margin-bottom: 1rem; }
+.main-content dl dt {
+  padding: 0;
+  margin-top: 1rem;
+  font-size: 1rem;
+  font-weight: bold; }
+.main-content dl dd {
+  padding: 0;
+  margin-bottom: 1rem; }
 .main-content hr {
   height: 2px;
   padding: 0;
@@ -256,7 +256,7 @@ a {
     font-size: 0.9rem; } }
 
 
-/*个人信息*/
+/*涓汉淇℃伅*/
 .p-info{}
 .p-info-d{ width: 50%;  float: left;}
 @media screen and (min-width: 46em) {
@@ -272,3 +272,86 @@ a {
 }
 
 .clear-f{ clear: both;}
+.btn-top,.btn-qq{width: 50px; height: 50px; position: fixed; right: 10px; border-radius: 25px; cursor: pointer;}
+.btn-top{ display: none; bottom: 65px; background:#eee url("../images/btn-top.png") center center no-repeat; background-size: 35px auto;}
+.btn-qq{ bottom: 10px; background:#eee url("../images/btn-qq.png") center center no-repeat; background-size: 35px auto;}
+.btn-qq a{ display: block; width: 50px; height: 50px;}
+
+
+
+/*澶撮儴鍔ㄧ敾*/
+.animation-fromtop{
+  -webkit-animation:bounceInDown 1s .2s ease both;
+  -moz-animation:bounceInDown 1s .2s ease both;}
+@-webkit-keyframes bounceInDown{
+  0%{opacity:0;
+    -webkit-transform:translateY(-2000px)}
+  60%{opacity:1;
+    -webkit-transform:translateY(30px)}
+  80%{-webkit-transform:translateY(-10px)}
+  100%{-webkit-transform:translateY(0)}
+}
+@-moz-keyframes bounceInDown{
+  0%{opacity:0;
+    -moz-transform:translateY(-2000px)}
+  60%{opacity:1;
+    -moz-transform:translateY(30px)}
+  80%{-moz-transform:translateY(-10px)}
+  100%{-moz-transform:translateY(0)}
+}
+
+.animation-shake{
+  -webkit-animation:flipInX 2s 1s ease both;
+  -moz-animation:flipInX 2s 1s ease both;}
+@-webkit-keyframes flipInX{
+  0%{-webkit-transform:perspective(400px) rotateX(90deg);
+    opacity:0}
+  40%{-webkit-transform:perspective(400px) rotateX(-10deg)}
+  70%{-webkit-transform:perspective(400px) rotateX(10deg)}
+  100%{-webkit-transform:perspective(400px) rotateX(0deg);
+    opacity:1}
+}
+@-moz-keyframes flipInX{
+  0%{-moz-transform:perspective(400px) rotateX(90deg);
+    opacity:0}
+  40%{-moz-transform:perspective(400px) rotateX(-10deg)}
+  70%{-moz-transform:perspective(400px) rotateX(10deg)}
+  100%{-moz-transform:perspective(400px) rotateX(0deg);
+    opacity:1}
+}
+
+.animation-frombottom{
+  -webkit-animation:fadeInUp 1s 1.5s ease both;
+  -moz-animation:fadeInUp 1s 1.5s ease both;}
+@-webkit-keyframes fadeInUp{
+  0%{opacity:0;
+    -webkit-transform:translateY(20px)}
+  100%{opacity:1;
+    -webkit-transform:translateY(0)}
+}
+@-moz-keyframes fadeInUp{
+  0%{opacity:0;
+    -moz-transform:translateY(20px)}
+  100%{opacity:1;
+    -moz-transform:translateY(0)}
+}
+
+.animation-big-small{
+  -webkit-animation:bounceIn 1s 2s ease both;
+  -moz-animation:bounceIn 1s 2s ease both;}
+@-webkit-keyframes bounceIn{
+  0%{opacity:0;
+    -webkit-transform:scale(.3)}
+  50%{opacity:1;
+    -webkit-transform:scale(1.05)}
+  70%{-webkit-transform:scale(.9)}
+  100%{-webkit-transform:scale(1)}
+}
+@-moz-keyframes bounceIn{
+  0%{opacity:0;
+    -moz-transform:scale(.3)}
+  50%{opacity:1;
+    -moz-transform:scale(1.05)}
+  70%{-moz-transform:scale(.9)}
+  100%{-moz-transform:scale(1)}
+}
